--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
     ],
     "require": {
         "php" : "~7.2",
-        "guzzlehttp/guzzle": "^7.0"
+        "guzzlehttp/guzzle": ">=6.3"
     },
     "require-dev": {
         "phpunit/phpunit" : ">=8.0",
